<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/default_solid"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_img_profile"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/profile" />

            <TextView
                android:id="@+id/main_text_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                tools:text="Hyeongu Choi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_contribution"
                    android:textColor="@android:color/black" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/main_text_max_contribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_contribution"
                    android:textColor="@android:color/black" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/main_text_today_contribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_repo"
                    android:textColor="@android:color/black" />

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/main_text_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/main_text_followers"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/main_text_following"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/main_text_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Being a social innovator, a motivating speaker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/black"
        android:text="@string/contributions_in_the_last_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text_bio" />

</android.support.constraint.ConstraintLayout>